# cmd/api/main.go
@@ -28,6 +28,8 @@ import (
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
+// @SecurityDefinitions.oauth2.application OAuth2Application
+// @TokenUrl
 // @host localhost:8080
 // @BasePath /
 func main() {
