# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   domain.AccountType:
     enum:
@@ -63,7 +62,6 @@ definitions:
       error:
         type: string
     type: object
-host: localhost:8080
 info:
   contact:
     email: support@swagger.io
@@ -156,7 +154,13 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - OAuth2Application: []
       summary: Get an account
       tags:
       - accounts
+securityDefinitions:
+  OAuth2Application:
+    flow: application
+    type: oauth2
 swagger: "2.0"
